<resources>
    <string name="app_name">B3 BRØG</string>
    <string name="title_activity_brewing_temperature_frag">BrewingTemperature_frag</string>

    <!-- Generic -->
    <string name="continue_text">Continue</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="name">Name</string>

    <!-- Brew administration -->
    <string name="delete_brew">Delete brew</string>
    <string name="sure_to_delete_brew">Are you sure you want to delete brew "%1$s"?</string>
    <string name="updating_brews">Updating list of brews...</string>

    <!-- Esp BLE provision -->
    <string name="search_for_new_devices">Search for new devices</string>
    <string name="proof_of_possession">Proof of Possession</string>
    <string name="ssid">SSID</string>
    <string name="password">Password</string>
    <string name="sending_wifi_creds">Sending Wi-Fi credentials</string>
    <string name="applying_wifi_creds">Applying Wi-Fi connection</string>
    <string name="checking_provision_status">Checking provision status</string>
    <string name="missing_bt_access">It doesn\'t seem like we can connect to the Bluetooth interface on your device.\nPlease make sure your device supports Bluetooth!</string>
    <string name="searching_for_devices">Searching for devices...</string>
    <string name="err_occurred_during_device_scan">An error occurred while trying to scan for new devices</string>
    <string name="device_name">Name: %1$s</string>
    <string name="device_connected">Device connected</string>
    <string name="device_disconnected">Device disconnected</string>

    <string name="time_in_minutes">Time left: %1$s minute(s)</string>

    <!-- Brew creation -->
    <string name="temperature_in_celsius">Temperature in degrees celsius</string>
    <string name="amount_of_coffee_in_grams">Amount of coffee in grams</string>
    <string name="bloom_time_seconds">Bloom time in seconds</string>
    <string name="bloom_water_ml">Bloom water in mL</string>
    <string name="fine">Fine</string>
    <string name="medium">Medium</string>
    <string name="coarse">Coarse</string>
    <string name="enter_name_for_recipe">Enter name for recipe</string>
    <!-- <string name="">Indtast navn på opskrift</string> -->
    <string name="ground_coffee_amount">Ground Coffee Amount</string>
    <string name="grind_size">Grind Size</string>
    <string name="brewing_temperature">Brewing Temperature</string>
    <string name="bloom_water_amount">Bloom Water Amount</string>
    <string name="bloom_time">Bloom Time</string>
    <string name="coffee_water_ratio">Coffee Water Ratio</string>
    <string name="total_brew_time">Total Brew Time</string>

    <!-- Select brewer -->
    <string name="select_brewer">Select brewer</string>
    <string name="add_new_device">Add new device</string>

    <!-- Brew process -->
    <string name="current_recipe">Current recipe: %1$s</string>

    <!-- Menu -->
    <string name="settings">Settings</string>
    <string name="connect">Connect</string>
    <string name="help">Help</string>
    <string name="sign_out">Sign out</string>

    <!-- Login -->
    <string name="login_parameters_not_ok">Username and password must both have a length of 1 or greater</string>
    <string name="email">E-mail</string>
    <string name="login">Login</string>

    <!-- Sign up -->
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm password</string>

    <!-- My profile -->
    <string name="my_profile_title">My Profile</string>
    <string name="my_profile_name">Name: %1$s</string>
    <string name="my_profile_email">E-mail: %1$s</string>
    <string name="my_profile">My profile</string>
    <string name="missing_add_account">Missing an account? Click here to register!</string>
    <string name="forgot_password">Forgot password? Click here to reset!</string>

    <!-- Reset password -->
    <string name="reset_password">Reset Password</string>

    <!-- Errors -->
    <string name="error_updating_brew">An error occurred while trying to update your brew in the cloud</string>
</resources>