<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="views.activities.espble.GetWifiCredentialsActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/deviceName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp"
            android:textAlignment="center" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deviceName"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:id="@+id/ssidText"
            android:hint="@string/ssid"
            android:textAlignment="center" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ssidText"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:id="@+id/pwdText"
            android:hint="@string/password"
            android:textAlignment="center" />


    <Button
            android:text="@string/continue_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/connectBtn"
            android:background="@drawable/connect_button"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/pwdText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="60dp" />

</androidx.constraintlayout.widget.ConstraintLayout>