<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_brown"
    android:clickable="true"
    android:elevation="40dp"
    tools:context="views.fragments.ChooseGrindSize_frag">

    <androidx.cardview.widget.CardView
        android:layout_width="233dp"
        android:layout_height="307dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="150dp"
        android:layout_marginRight="85dp"
        app:cardBackgroundColor="#8B5A39"
        app:cardCornerRadius="15dp"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/Fine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="60dp"
            android:layout_weight="1"
            android:text="@string/fine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/Coarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:text="@string/coarse"
            app:layout_constraintStart_toStartOf="@+id/Medium"
            app:layout_constraintTop_toBottomOf="@+id/Medium" />

        <Button
            android:id="@+id/Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:text="@string/medium"
            app:layout_constraintStart_toStartOf="@+id/Fine"
            app:layout_constraintTop_toBottomOf="@+id/Fine" />

        <TextView
            android:id="@+id/grindsizetxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="         Choose grind size"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

</RelativeLayout>